--- a/mainapp.html
+++ b/mainapp.html
@@ -1,122 +1,80 @@
-<html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Smart Control &amp; User Insights App
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-  <style>
-   body {
-            font-family: 'Roboto', sans-serif;
-        }
-  </style>
- </head>
- <body class="bg-gray-100 text-gray-800">
-  <div class="container mx-auto p-4">
-   <header class="flex justify-between items-center py-4">
-    <h1 class="text-2xl font-bold">
-     Smart Control &amp; User Insights
-    </h1>
-    <nav>
-     <ul class="flex space-x-4">
-      <li>
-       <a class="text-blue-500" href="#">
-        Home
-       </a>
-      </li>
-      <li>
-       <a class="text-gray-700" href="#">
-        Features
-       </a>
-      </li>
-      <li>
-       <a class="text-gray-700" href="#">
-        Reports
-       </a>
-      </li>
-      <li>
-       <a class="text-gray-700" href="#">
-        Settings
-       </a>
-      </li>
-     </ul>
-    </nav>
-   </header>
-   <section class="my-8">
-    <h2 class="text-xl font-semibold mb-4">
-     Water Consumption Tracking
-    </h2>
-    <div class="bg-white p-4 rounded shadow">
-     <h3 class="text-lg font-medium">
-      Sustainable Usage
-     </h3>
-     <p>
-      Track your water consumption to ensure sustainable usage.
-     </p>
-     <img alt="Graph showing water consumption tracking for sustainable usage" height="200" src="https://storage.googleapis.com/a1aa/image/0Eltr5G7_d6-6Pe-Uzzt71NWFWzRJcF9OkItdLKvDUE.jpg" width="300"/>
-    </div>
-   </section>
-   <section class="my-8">
-    <h2 class="text-xl font-semibold mb-4">
-     Smart Alerts &amp; Notifications
-    </h2>
-    <div class="bg-white p-4 rounded shadow">
-     <h3 class="text-lg font-medium">
-      Alerts
-     </h3>
-     <ul class="list-disc pl-5">
-      <li>
-       Low water levels
-      </li>
-      <li>
-       Maintenance reminders
-      </li>
-     </ul>
-    </div>
-   </section>
-   <section class="my-8">
-    <h2 class="text-xl font-semibold mb-4">
-     Integration with Smart Home Systems
-    </h2>
-    <div class="bg-white p-4 rounded shadow">
-     <h3 class="text-lg font-medium">
-      Smart Home Integration
-     </h3>
-     <p>
-      Integrate with Google Home and Alexa for seamless control.
-     </p>
-     <img alt="Icons of Google Home and Alexa indicating integration with smart home systems" height="200" src="https://storage.googleapis.com/a1aa/image/mYXVAygky6r2aErnTKkxW_UuZZ1FhzDw-9zCfq5_M9A.jpg" width="300"/>
-    </div>
-   </section>
-   <section class="my-8">
-    <h2 class="text-xl font-semibold mb-4">
-     Tech Stack
-    </h2>
-    <div class="bg-white p-4 rounded shadow">
-     <h3 class="text-lg font-medium">
-      Mobile App
-     </h3>
-     <p>
-      Flutter, React Native
-     </p>
-     <h3 class="text-lg font-medium mt-4">
-      Backend
-     </h3>
-     <p>
-      Django, Firebase
-     </p>
-     <h3 class="text-lg font-medium mt-4">
-      API Integration
-     </h3>
-     <p>
-      Home automation APIs
-     </p>
-    </div>
-   </section>
-  </div>
- </body>
-</html>
+import 'package:flutter/material.dart';
+import 'package:cloud_firestore/cloud_firestore.dart';
+import 'package:firebase_messaging/firebase_messaging.dart';
+import 'package:http/http.dart' as http;
+
+void main() {
+  runApp(MyApp());
+}
+
+class MyApp extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      debugShowCheckedModeBanner: false,
+      title: 'Smart Water Control',
+      theme: ThemeData(
+        primarySwatch: Colors.blue,
+      ),
+      home: DashboardScreen(),
+    );
+  }
+}
+
+class DashboardScreen extends StatefulWidget {
+  @override
+  _DashboardScreenState createState() => _DashboardScreenState();
+}
+
+class _DashboardScreenState extends State<DashboardScreen> {
+  final FirebaseFirestore _firestore = FirebaseFirestore.instance;
+  final FirebaseMessaging _firebaseMessaging = FirebaseMessaging.instance;
+
+  double waterUsage = 0.0;
+  
+  @override
+  void initState() {
+    super.initState();
+    _firebaseMessaging.requestPermission();
+    _getWaterUsage();
+  }
+
+  void _getWaterUsage() {
+    _firestore.collection('water_usage').doc('home').snapshots().listen((snapshot) {
+      if (snapshot.exists) {
+        setState(() {
+          waterUsage = snapshot['usage'].toDouble();
+        });
+      }
+    });
+  }
+
+  Future<void> _sendCommand(String command) async {
+    String url = 'http://your-backend-server.com/api/smart-home';
+    await http.post(Uri.parse(url), body: {'command': command});
+  }
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(title: Text('Smart Water Control')),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: [
+            Text('Water Usage: $waterUsage L', style: TextStyle(fontSize: 24)),
+            SizedBox(height: 20),
+            ElevatedButton(
+              onPressed: () => _sendCommand('turn_on'),
+              child: Text('Turn On Water Harvesting'),
+            ),
+            ElevatedButton(
+              onPressed: () => _sendCommand('turn_off'),
+              child: Text('Turn Off Water Harvesting'),
+            ),
+          ],
+        ),
+      ),
+    );
+  }
+}
